--- a/css/vim.css
+++ b/css/vim.css
@@ -1,63 +1,64 @@
 * {
-  font-family: 'Source Code Pro' ;
-  }
-  a.top {
-   position: fixed;
-   bottom: 0em;
-   right: 0em;
-   background-color: black;
-   color: white;
-   text-decoration: none;
-  }
-  #logovim {
+    font-family: 'Source Code Pro';
+}
+a.top {
+    position: fixed;
+    bottom: 0em;
+    right: 0em;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+}
+#logovim {
     max-width: 90px;
     height: 100%;
     height: auto;
     margin: auto;
     float: left;
-  }
+}
 table, td {
-	border: 0.1em black solid;
-  margin-left: 0.3em;
-  padding: 0.2em;
-  background-color: #EEF6FF ;
-  box-shadow: 0.06em 0.06em 0.75em #555;
+    font-size: 1.5em;
+    border: 0.1em black solid;
+    margin-left: 0.3em;
+    padding: 0.2em;
+    background-color: #EEF6FF;
+    box-shadow: 0.06em 0.06em 0.75em #555;
 }
 body {
-  background-color: #B29F7E;
-  font-size: 1.5em;
+    background-color: #B29F7E;
+    font-size: 1.5em;
 }
 #en-tete {
- width: 95%;
- background-color: #5B84B2;
- border: solid #416D7F 0.12em;
- padding: 0.7em;
- text-align: center;
- box-shadow: 0.06em 0.06em 0.75em #555;
- margin-bottom: 1em;
- margin-left: 1em;
+    width: 95%;
+    background-color: #5B84B2;
+    border: solid #416D7F 0.12em;
+    padding: 0.7em;
+    text-align: center;
+    box-shadow: 0.06em 0.06em 0.75em #555;
+    margin-bottom: 1em;
+    margin-left: 1em;
 }
 #nav {
-  width: 95%;
-	padding: 0; margin: 0;
-	text-align: center;
-  background-color: black;
-  color : white;
-  box-shadow: 0.06em 0.06em 0.75em #555;
-  margin-left: auto;
-  margin-right: auto;
+    width: 95%;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    background-color: black;
+    color: white;
+    box-shadow: 0.06em 0.06em 0.75em #555;
+    margin-left: auto;
+    margin-right: auto;
 }
 #nav li {
-	display: inline;
-	list-style: none;
-
+    display: inline;
+    list-style: none;
 }
 ul li a:hover {
-  color: blue;
-  background-color: #515751;
+    color: blue;
+    background-color: #515751;
 }
 #nav a {
-	display:inline-block;
-	margin: 0 1.8em;
-  color: white;
+    display: inline-block;
+    margin: 0 1.8em;
+    color: white;
 }
