--- a/css/vim.css
+++ b/css/vim.css
@@ -8,6 +8,7 @@ a.top {
     background-color: black;
     color: white;
     text-decoration: none;
+    font-size: 1.2em;
 }
 #logovim {
     max-width: 90px;
